--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.khristian.saomashup.addon"
+        package="com.aartdev.saomc.addon"
         android:versionCode="1"
         android:versionName="1.0.0">
 
@@ -10,7 +10,7 @@
     <application android:label="@string/app_name" android:icon="@drawable/pack" android:hasCode="false">
 
     <meta-data android:name="net.zhuoweizhang.mcpelauncher.api.nativelibname"
-        android:value="com.khristian.saomashup.addon"/>
+        android:value="com.smartdev.saom.addon"/>
 
     <meta-data android:name="net.zhuoweizhang.mcpelauncher.api.targetmcpeversion" android:value="0.14.0.b7"/>
     </application>
